fixed bug with links to expand truncated comment, added min-width to navbar

--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -7005,6 +7005,7 @@ textarea.form-control-lg {
 }
 
 .mb-3 {
+  min-width: 800px;
   margin-bottom: 1rem !important
 }
 
